增加动态加载模块功能

--- a/pages/modules/index.html
+++ b/pages/modules/index.html
@@ -15,6 +15,7 @@
     </div>
 
     <div class="result">转化结果：</div>
-    <script type="module" src="js/index.js"></script>
+    <p class="evaluate" style="color: red"></p>
+    <script type="module" src="./js/index.mjs"></script>
   </body>
 </html>
