增加html5原生dialog demo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>DEMO</title>
   </head>
   <body>
+    <h3>HTML</h3>
     <ul>
       <li>
-        <a href="/pages/modules/index.html">JavaScript Modules</a>
+        <a href="/pages/html/dialog/index.html">dialog 标签</a>
+      </li>
+    </ul>
+    <h3>JavaScript</h3>
+    <ul>
+      <li>
+        <a href="/pages/javascript/modules/index.html">JavaScript Modules</a>
       </li>
     </ul>
   </body>
