增加Custom Element Demo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       <li>
         <a href="/pages/html/dialog/index.html">dialog 标签</a>
       </li>
+      <li>
+        <a href="/pages/html/dialog/index.html">Web Component</a>
+      </li>
+    </ul>
+    <h3>Web Component</h3>
+    <ul>
+      <li>
+        <a href="/pages/web-component/custom-element.html">Custom Elements</a>
+      </li>
     </ul>
     <h3>JavaScript</h3>
     <ul>
