--- a/pages/html/dialog/index.html
+++ b/pages/html/dialog/index.html
@@ -21,9 +21,10 @@
 
     <style>
       dialog {
+        top: 130px;
         width: 400px;
         height: 220px;
-        border: 1px solid #eee;
+        border: 1px solid red;
         border-radius: 8px;
       }
       dialog::backdrop {
