增加插槽示例代码

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <li>
         <a href="/pages/web-component/custom-element.html">Custom Elements</a>
       </li>
+      <li>
+        <a href="/pages/web-component/slot.html">插槽 (slot)</a>
+      </li>
     </ul>
     <h3>JavaScript</h3>
     <ul>
